# leonardo_managers

./: Dockerfile  README.md
src/gcs_manager/: CMakeLists.txt  package.xml
src/gcs_manager/include/: gcs_manager.h
src/gcs_manager/launch/: manager.launch.py
src/gcs_manager/missions/: DC2024.Json
src/gcs_manager/src/: gcs_manager.cpp
src/rover_manager/: CMakeLists.txt  package.xml  rover.rviz
src/rover_manager/include/: rover_manager.h
src/rover_manager/launch/: manager.launch.py
src/rover_manager/src/: rover_manager.cpp
src/seed/: CMakeLists.txt  README.md
src/seed/BBS/DroneContest/: pdt_behaviors.cpp  pdt_behaviors.h
src/seed/BBS/std/: ros_behaviors.h  show.h
src/seed/LTM/: seed_pdt_drone_LTM.prolog  seed_pdt_ptzcam_LTM.prolog  seed_pdt_rover_LTM.prolog
src/seed/LTM/old/: INVERSE_seed_iiwa_LTM.prolog  seed_LTM.prolog  seed_iiwa_LTM (backup).prolog  seed_iiwa_LTM.prolog  seed_inspect_drone_LTM.prolog  seed_lnd_drone_LTM (backup).prolog  seed_rover1_LTM.prolog  seed_rover2_LTM.prolog  seed_rover3_LTM.prolog
src/seed/LTM/old/older/: LTM_Grieco.prolog  LTM_backup (before goal collapsing).prolog  MapMemory.prolog  SHOP.prolog  STM.prolog  STRIPS.prolog
src/seed/launch/: seed_erf.launch.py  seed_unina.launch.py
src/seed/learning/: weights  weights_1  weights_BACKUP_44694  weights_BASE_44694  weights_LOCAL_44694  weights_REMOTE_44694
src/seed/learning/learning_logistic_0.3/avoid/: weights
src/seed/learning/learning_logistic_0.3/green_before/: info
src/seed/learning/old_test/test1/: engine.fs  engine.ts  errors.ods  weights_schemaAVG
src/seed/learning/old_test/test2/: engine.fs  engine.ts  errors.ods  weights
src/seed/learning/old_test/test3/: engine.fs  engine.ts  errors.ods  weights
src/seed/learning/old_test/test4/: errors.ods
src/seed/learning/old_test/test5/: errors.ods  weights
src/seed/learning/old_test/test7/: engine.ts  errors-weights.ods  weights
src/seed/learning/old_test/test_step1/: engine.ts  errors.ods
src/seed/learning/test_avoidance1/ep1/: engine.fs  engine.ts  weights
src/seed/learning/test_avoidance_releaser1/: avoidance_releaser_error.ods  weights_ep2
src/seed/learning/test_avoidance_releaser_fast (stable)/: avoidance_test.ods  weights
src/seed/learning/test_avoidance_vrep2/: readme
src/seed/learning/test_step2/: Senza nome 1.ods  engine.ts  weights
src/seed/learning/test_step3 (tel corretta)/: error.ods  weights
src/seed/learning/test_step_hierarchical1/: error.ods
src/seed/learning/test_step_hierarchical2 (aggiunto old_w)/: engine.fs  engine.ts  weights
src/seed/learning/test_takeN_step1/: engine.fs  engine.ts  weights
src/seed/log/: seed_pdt_rover_log.txt
src/seed/observer/: seed_pdt_rover.rules
src/seed/src/: seed_wakeUp.cpp
(+238 files in other folders)
